[gd_scene load_steps=3 format=3 uid="uid://x4fyk72s5jpc"]

[ext_resource type="Script" uid="uid://b0cws2a8v70kt" path="res://Demo/TransitionManagerDemo/panel.gd" id="1_aq2ld"]
[ext_resource type="PackedScene" uid="uid://bi2fqo0bb0ixe" path="res://addons/ControlWiggleComponent/ControlWiggleComponent.tscn" id="2_dm5du"]

[node name="Test" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 12

[node name="Panel" type="PanelContainer" parent="CanvasLayer"]
offset_right = 82.0
offset_bottom = 136.0
script = ExtResource("1_aq2ld")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 2

[node name="ToBlack" type="Button" parent="CanvasLayer/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "To Black"

[node name="ControlWiggleComponent" parent="CanvasLayer/Panel/VBoxContainer/ToBlack" instance=ExtResource("2_dm5du")]

[node name="ToGame" type="Button" parent="CanvasLayer/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "To Game"

[node name="ControlWiggleComponent" parent="CanvasLayer/Panel/VBoxContainer/ToGame" instance=ExtResource("2_dm5du")]

[node name="SetBlack" type="Button" parent="CanvasLayer/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Set Black"

[node name="ControlWiggleComponent" parent="CanvasLayer/Panel/VBoxContainer/SetBlack" instance=ExtResource("2_dm5du")]

[node name="SetGame" type="Button" parent="CanvasLayer/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Set Game"

[node name="ControlWiggleComponent" parent="CanvasLayer/Panel/VBoxContainer/SetGame" instance=ExtResource("2_dm5du")]
